--- a/lab1/s3watch/template.yaml
+++ b/lab1/s3watch/template.yaml
@@ -1,25 +1,122 @@
-AWSTemplateFormatVersion: '2010-09-09'
+AWSTemplateFormatVersion: 2010-09-09
 Transform: AWS::Serverless-2016-10-31
-Description: >
-  s3watch
-  Sample SAM Template for s3watch
+Description: S3-to-EventBridge Integration 2 - Existing Buckets
 
-# More info about Globals: https://github.com/awslabs/serverless-application-model/blob/master/docs/globals.rst
+Parameters:
+  ExistingBucketName:
+    Type: String
+    Default: cscie-11
+
+  LoggingBucketName:
+    Type: String
+    Default: cscie-11-s3watcher-logs
+
 Resources:
-  S3TriggeredFunction:
+  # Bucket for CloudTrail Logs
+  LoggingBucket:
+    Type: AWS::S3::Bucket
+    Properties:
+      BucketName: !Ref LoggingBucketName
+
+  # Bucket policy enables CloudTrail to write to the logging bucket
+  BucketPolicy:
+    Type: AWS::S3::BucketPolicy
+    Properties:
+      Bucket: !Ref LoggingBucket
+      PolicyDocument:
+        Version: 2012-10-17
+        Statement:
+          - Sid: AWSCloudTrailAclCheck
+            Effect: Allow
+            Principal:
+              Service: cloudtrail.amazonaws.com
+            Action: s3:GetBucketAcl
+            Resource: !GetAtt LoggingBucket.Arn
+          - Sid: AWSCloudTrailWrite
+            Effect: Allow
+            Principal:
+              Service: cloudtrail.amazonaws.com
+            Action: s3:PutObject
+            Resource: !Sub ${LoggingBucket.Arn}/AWSLogs/${AWS::AccountId}/*
+            Condition:
+              StringEquals:
+                s3:x-amz-acl: bucket-owner-full-control
+
+  # The CloudTrail trail - uses the LoggingBucketName as the trail name
+  myTrail:
+    Type: AWS::CloudTrail::Trail
+    DependsOn: BucketPolicy
+    Properties:
+      TrailName: !Ref LoggingBucketName
+      S3BucketName: !Ref LoggingBucket
+      IsLogging: true
+      IsMultiRegionTrail: false
+      EventSelectors:
+        - IncludeManagementEvents: false
+          DataResources:
+            - Type: AWS::S3::Object
+              Values:
+                - !Sub arn:aws:s3:::${ExistingBucketName}/
+      IncludeGlobalServiceEvents: false
+
+  ### This section configures the consuming Lambda function ###
+
+  # Lambda function
+  EventConsumerFunction:
     Type: AWS::Serverless::Function
     Properties:
-      CodeUri: hello_world/
-      Handler: app.lambda_handler  # The Python function in app.py
-      Runtime: python3.9
-      Events:
-        S3ObjectUploadEvent:  # This event triggers the function
-          Type: S3
-          Properties:
-            Bucket: cscie-11
-            Events: s3:ObjectCreated:*
-            Filter:
-              S3Key:
-                Rules:
-                  - Name: prefix
-                    Value: students/
+      CodeUri: eventConsumer/
+      Handler: app.lambda_handler
+      Runtime: python3.11
+      Policies:
+        - Statement:
+            - Sid: AllowS3Read
+              Effect: Allow
+              Action:
+                - s3:GetObject
+              Resource: "arn:aws:s3:::cscie-11/*"
+
+            - Sid: AllowRoute53Changes
+              Effect: Allow
+              Action:
+                - route53:ChangeResourceRecordSets
+                - route53:ListResourceRecordSets
+                - route53:GetChange
+              Resource: "arn:aws:route53:::hostedzone/*"
+
+            - Sid: AllowSES
+              Effect: Allow
+              Action:
+                - ses:SendEmail
+                - ses:SendRawEmail
+              Resource: "*"
+
+
+
+
+  # EventBridge rule - invokes EventConsumerFunction
+  EventRule:
+    Type: AWS::Events::Rule
+    Properties:
+      Description: EventRule
+      State: ENABLED
+      EventPattern:
+        source:
+          - aws.s3
+        detail:
+          eventName:
+            - PutObject
+          requestParameters:
+            bucketName:
+              - !Ref ExistingBucketName
+      Targets:
+        - Arn: !GetAtt EventConsumerFunction.Arn
+          Id: EventConsumerFunctionTarget
+
+  PermissionForEventsToInvokeLambda:
+    Type: AWS::Lambda::Permission
+    Properties:
+      FunctionName: !Ref EventConsumerFunction
+      Action: lambda:InvokeFunction
+      Principal: events.amazonaws.com
+      SourceArn: !GetAtt EventRule.Arn
