--- a/lab1/s3watch/.aws-sam/build.toml
+++ b/lab1/s3watch/.aws-sam/build.toml
@@ -5,8 +5,9 @@ codeuri = "/Users/simsong/gits/csci_e-11/lab1/s3watch/eventConsumer"
 runtime = "python3.11"
 architecture = "x86_64"
 handler = "app.lambda_handler"
-manifest_hash = ""
+manifest_hash = "37037abf6e9be7dbe4d04fb60de0a9d2"
 packagetype = "Zip"
 functions = ["EventConsumerFunction"]
+source_hash = ""
 
 [layer_build_definitions]
