--- a/lab2/sgarfinkel-le-ssl.conf
+++ b/lab2/sgarfinkel-le-ssl.conf
@@ -1,11 +1,11 @@
 <IfModule mod_ssl.c>
 <VirtualHost *:443>
-    ServerName sgarfinkel.csci-e-17-2025.click
+    ServerName sgarfinkel.csci-e-11.org
     DocumentRoot /path/to/your/website
     # Optional: Other directives like Directory or Log settings
 
-SSLCertificateFile /etc/letsencrypt/live/sgarfinkel.csci-e-17-2025.click/fullchain.pem
-SSLCertificateKeyFile /etc/letsencrypt/live/sgarfinkel.csci-e-17-2025.click/privkey.pem
+SSLCertificateFile /etc/letsencrypt/live/sgarfinkel.csci-e-11.org/fullchain.pem
+SSLCertificateKeyFile /etc/letsencrypt/live/sgarfinkel.csci-e-11.org/privkey.pem
 Include /etc/letsencrypt/options-ssl-apache.conf
 
     # Reverse proxy configuration for /flask/
