entire flaskr app runs

--- a/lab2/sgarfinkel-le-ssl.conf
+++ b/lab2/sgarfinkel-le-ssl.conf
@@ -12,7 +12,7 @@ Include /etc/letsencrypt/options-ssl-apache.conf
     ProxyPass "/flask/" "http://127.0.0.1:5000/"
     ProxyPassReverse "/flask/" "http://127.0.0.1:5000/"
 
-    # Optional: Rewrite rule to ensure trailing slash is added
+    # Rewrite rule to ensure trailing slash is added
     RewriteEngine on
     RewriteCond %{REQUEST_URI} ^/flask$ [NC]
     RewriteRule ^(.*)$ /flask/ [L,R=301]
