--- a/staff/leaderboard/pytest.ini
+++ b/staff/leaderboard/pytest.ini
@@ -2,3 +2,5 @@
 pythonpath = src
 filterwarnings =
     ignore::DeprecationWarning:botocore
+markers =
+    docker: marks tests as requiring Docker environment
