--- a/staff/s3watch/samconfig.toml
+++ b/staff/s3watch/samconfig.toml
@@ -15,12 +15,13 @@ lint = true
 
 [default.deploy.parameters]
 capabilities = "CAPABILITY_IAM"
-confirm_changeset = true
+# confirm_changeset = true
 resolve_s3 = true
 s3_prefix = "s3watch"
 region = "us-east-2"
 parameter_overrides = "ExistingBucketName=\"cscie-11\" LoggingBucketName=\"cscie-11-s3watcher-logs\""
 image_repositories = []
+profile = "fas"
 
 [default.package.parameters]
 resolve_s3 = true
