--- a/lab4/Makefile
+++ b/lab4/Makefile
@@ -1,5 +1,5 @@
 #
-# This is a Unix Makefile
+# This is a Unix Makefile for Lab 4
 #
 # The best Makefile tutorial we have found is here:
 # https://opensource.com/article/18/8/what-how-makefile
@@ -24,6 +24,7 @@ install-lab4-service:
 	sudo systemctl daemon-reload
 	sudo systemctl enable lab4
 	sudo systemctl start lab4
+	@# Do not overwrite lab4 as it may have been customized
 	@if [ ! -r /etc/httpd/conf.d/lab4.conf ]; \
 		then echo installing /etc/httpd/conf/lab4.conf ; \
 		sudo install lab4.conf /etc/httpd/conf.d/ ; \
@@ -36,29 +37,29 @@ install-lab4-service:
 # Run the application locally for testing
 # Note: your local machine must be authorized for your AWS account with the `aws` command.
 local-app:
-	. venv/bin/activate; flask --app flaskr run --debug
+	. venv/bin/activate; flask --app app run --debug
 
 # Print help for the application
 help:
-	. venv/bin/activate; flask --app flaskr --help
+	. venv/bin/activate; flask --app app --help
 
 # Create a new database
 init-db:
-	. venv/bin/activate; flask --app flaskr init-db
+	. venv/bin/activate; flask --app app init-db
 # Generate a new api-key
 new-apikey:
-	. venv/bin/activate; flask --app flaskr new-apikey
+	. venv/bin/activate; flask --app app new-apikey
 
 # Dump the database
 dump-db:
-	. venv/bin/activate; flask --app flaskr dump-db
+	. venv/bin/activate; flask --app app dump-db
 
 
 #
 # Software engineering targets
 
 pylint:
-	. venv/bin/activate; python3 -m pylint flaskr
+	. venv/bin/activate; python3 -m pylint app
 
 
 
