--- a/lab4/lab4.conf
+++ b/lab4/lab4.conf
@@ -1,7 +1,8 @@
 <VirtualHost *:80>
-    ServerName YOURDOMAIN-lab4.csci-e-11.org
-    DocumentRoot /home/www
-RewriteEngine on
-RewriteCond %{SERVER_NAME} = YOURDOMAIN-lab4.csci-e-11.org
-RewriteRule ^ https://%{SERVER_NAME}%{REQUEST_URI} [END,NE,R=permanent]
+    ServerName smashedemail-lab4.csci-e-11.org
+    DocumentRoot /home/ec2-user/spring25/lab4/www
+
+    # Reverse proxy configuration for lab4
+    ProxyPass "/" "http://127.0.0.1:8004/"
+    ProxyPassReverse "/" "http://127.0.0.1:8004/"
 </VirtualHost>
