--- a/lab4/lab4.service
+++ b/lab4/lab4.service
@@ -13,7 +13,11 @@ WorkingDirectory=/home/ec2-user/spring25/lab4
 # -b 127.0.0.1:8004 - listens on localhost, port 8004
 # app:app  - runs the 'app' attribute instead a module called 'app'
 
-ExecStart=/home/ec2-user/spring25/lab4/venv/bin/gunicorn --reload -w 4 -b 127.0.0.1:8004 app:app
+ExecStart=/home/ec2-user/spring25/lab4/venv/bin/gunicorn \
+    --reload -w 2 -b 127.0.0.1:8004 \
+    --access-logfile=/home/ec2-user/spring25/lab4/logs/access.log \
+    --error-logfile=/home/ec2-user/spring25/lab4/logs/error.log \
+    app:app
 
 # Optional: specify environment variables if needed
 # Environment="PATH=/path/to/your/venv/bin"
