--- a/lab5/lab5.service
+++ b/lab5/lab5.service
@@ -12,7 +12,7 @@ WorkingDirectory=/home/ec2-user/spring25/lab5
 
 # Run gunicorn:
 # --reload - automatically reloads the app when the program changes
-# -w 4     - four workers
+# -w 2     - two workers
 # -b 127.0.0.1:8004 - listens on localhost, port 8005
 # app:app  - runs the 'app' attribute instead a module called 'app'
 
