--- a/staff/leaderboard/requirements.txt
+++ b/staff/leaderboard/requirements.txt
@@ -1,7 +1,5 @@
 # requirements.txt for running locally
-requests
-boto3
-flask
-apig_wsgi
+# This should be added to src/requirements.txt
 pylint
 pylint-pytest
+pytest
