--- a/staff/leaderboard/samconfig.toml
+++ b/staff/leaderboard/samconfig.toml
@@ -14,7 +14,7 @@ lint = true
 
 [default.deploy.parameters]
 capabilities = "CAPABILITY_IAM"
-confirm_changeset = true
+confirm_changeset = false
 resolve_s3 = true
 s3_prefix = "leaderboard"
 region = "us-east-1"
@@ -26,6 +26,7 @@ profile = "fas"
 [default.package.parameters]
 resolve_s3 = true
 
+[default.sync]
 [default.sync.parameters]
 watch = true
 
