--- a/staff/leaderboard/template.yaml
+++ b/staff/leaderboard/template.yaml
@@ -7,7 +7,7 @@
 
 AWSTemplateFormatVersion: '2010-09-09'
 Transform: AWS::Serverless-2016-10-31
-Description: >-
+Description: >
   Leaderboard application
 
 Parameters:
@@ -20,8 +20,7 @@ Parameters:
 
 Globals:
   Function:
-    Timeout: 10
-    MemorySize: 256
+    Timeout: 30
   Api:
     Cors:
       AllowMethods: "'OPTIONS,GET,POST,PUT,DELETE'"
@@ -29,7 +28,6 @@ Globals:
       AllowOrigin: "'*'"
 
 Resources:
-  # Create our SSL certificate
   GenerateCertificate:
     Type: AWS::CertificateManager::Certificate
     Properties:
@@ -39,52 +37,31 @@ Resources:
       - DomainName: !Ref FQDN
         HostedZoneId: !Ref ZoneId
 
-  RestApiGateway:
-    Type: AWS::Serverless::Api
-    Properties:
-      StageName: Prod
-      Domain:
-        DomainName: !Ref FQDN
-        CertificateArn: !Ref GenerateCertificate
-        Route53:
-          HostedZoneId: !Ref ZoneId
-      Cors:
-        AllowMethods: "'OPTIONS,GET,POST,PUT,DELETE'"
-        AllowHeaders: "'content-type,X-Amz-Date,Authorization,X-Api-Key,X-Amz-Security-Token'"
-        AllowOrigin: "'*'"
-
-  HandlerFunction:
+  FlaskFunction:
     Type: AWS::Serverless::Function
     Properties:
-      Architectures:
-        - x86_64
-      CodeUri: ./src
-      Handler: lambda_handler.lambda_app
+      CodeUri: app/
+      Handler: run.sh
       Runtime: python3.12
-      Events:
-        RootPath:
-          Type: Api
-          Properties:
-            RestApiId: !Ref RestApiGateway
-            Path: /
-            Method: ANY
-        ProxyPath:
-          Type: Api
-          Properties:
-            RestApiId: !Ref RestApiGateway
-            Path: /{proxy+}
-            Method: ANY
+      MemorySize: 256
       Environment:
         Variables:
           LEADERBOARD_TABLE: !Ref LeaderboardTable
+          AWS_LAMBDA_EXEC_WRAPPER: /opt/bootstrap
+          PORT: 8000
+      Layers:
+        - !Sub arn:aws:lambda:${AWS::Region}:753240598075:layer:LambdaAdapterLayerX86:23
+      Events:
+        ApiEvent:
+          Type: HttpApi
       Policies:
         - DynamoDBCrudPolicy:
             TableName: !Ref LeaderboardTable
 
-  # define the DynamoDB table used to hold the Leaderboard
-  # We index on the name. Each entry is a JSON object whose structure
-  # is determiend at runtime.
-  # We actually store these attributes: name, ip_address, first_seen, last_seen, secret_key
+
+  # Define the DynamoDB table used to hold the Leaderboard
+  # We index on the name. Each entry is a JSON object whose structure is determiend at runtime.
+  # The table is automatically created with 'sam deploy' and destroyed with 'sam delete'
   LeaderboardTable:
     Type: AWS::DynamoDB::Table
     Properties:
