--- a/staff/leaderboard/template.yaml
+++ b/staff/leaderboard/template.yaml
@@ -37,6 +37,34 @@ Resources:
       - DomainName: !Ref FQDN
         HostedZoneId: !Ref ZoneId
 
+  # Custom domain name for the API Gateway HttpApi
+  CustomDomainName:
+    Type: AWS::ApiGatewayV2::DomainName
+    Properties:
+      DomainName: !Ref FQDN
+      DomainNameConfigurations:
+        - CertificateArn: !Ref GenerateCertificate
+          EndpointType: REGIONAL
+
+  # API Gateway API mapping for the custom domain
+  ApiMapping:
+    Type: AWS::ApiGatewayV2::ApiMapping
+    Properties:
+      ApiId: !Ref ServerlessHttpApi
+      DomainName: !Ref CustomDomainName
+      Stage: $default
+
+  # Route53 record to map the custom domain name to the API Gateway domain
+  Route53Record:
+    Type: AWS::Route53::RecordSet
+    Properties:
+      HostedZoneId: !Ref ZoneId
+      Name: !Ref FQDN
+      Type: A
+      AliasTarget:
+        DNSName: !GetAtt CustomDomainName.RegionalDomainName
+        HostedZoneId: !GetAtt CustomDomainName.RegionalHostedZoneId
+
   FlaskFunction:
     Type: AWS::Serverless::Function
     Properties:
@@ -80,3 +108,12 @@ Outputs:
   ApiUrl:
     Description: "API Gateway endpoint URL"
     Value: !Sub "https://${FQDN}"
+  FlaskApi:
+    Description: "API Gateway endpoint URL for Prod stage for Flask function"
+    Value: !Sub "https://${ServerlessHttpApi}.execute-api.${AWS::Region}.${AWS::URLSuffix}/"
+  FlaskFunction:
+    Description: "Flask Lambda Function ARN"
+    Value: !GetAtt FlaskFunction.Arn
+  FlaskIamRole:
+    Description: "Implicit IAM Role created for Flask function"
+    Value: !GetAtt FlaskFunctionRole.Arn
