--- a/staff/leaderboard/template.yaml
+++ b/staff/leaderboard/template.yaml
@@ -20,7 +20,7 @@ Parameters:
 
 Globals:
   Function:
-    Timeout: 30
+    Timeout: 3
   Api:
     Cors:
       AllowMethods: "'OPTIONS,GET,POST,PUT,DELETE'"
@@ -50,7 +50,7 @@ Resources:
   ApiMapping:
     Type: AWS::ApiGatewayV2::ApiMapping
     Properties:
-      ApiId: !Ref ServerlessHttpApi
+      ApiId: !Ref ServerlessRestApi
       DomainName: !Ref CustomDomainName
       Stage: $default
 
@@ -68,9 +68,11 @@ Resources:
   FlaskFunction:
     Type: AWS::Serverless::Function
     Properties:
-      CodeUri: app/
-      Handler: run.sh
-      Runtime: python3.12
+      #CodeUri: leaderboard_app/
+      CodeUri: hello_world/
+      Handler: app.lambda_handler
+      #Handler: run.sh
+      Runtime: python3.13
       MemorySize: 256
       Environment:
         Variables:
@@ -81,7 +83,10 @@ Resources:
         - !Sub arn:aws:lambda:${AWS::Region}:753240598075:layer:LambdaAdapterLayerX86:23
       Events:
         ApiEvent:
-          Type: HttpApi
+          Type: Api
+          Properties:
+            Path: /
+            Method: ANY
       Policies:
         - DynamoDBCrudPolicy:
             TableName: !Ref LeaderboardTable
@@ -110,7 +115,7 @@ Outputs:
     Value: !Sub "https://${FQDN}"
   FlaskApi:
     Description: "API Gateway endpoint URL for Prod stage for Flask function"
-    Value: !Sub "https://${ServerlessHttpApi}.execute-api.${AWS::Region}.${AWS::URLSuffix}/"
+    Value: !Sub "https://${ServerlessRestApi}.execute-api.${AWS::Region}.${AWS::URLSuffix}/"
   FlaskFunction:
     Description: "Flask Lambda Function ARN"
     Value: !GetAtt FlaskFunction.Arn
