--- a/staff/leaderboard/leaderboard_app/requirements.txt
+++ b/staff/leaderboard/leaderboard_app/requirements.txt
@@ -1,9 +1,8 @@
 # requirements.txt for the deployed lambda function
-apig-wsgi
-#gunicorn
+gunicorn
 itsdangerous
 Jinja2
 Flask
 requests
-#apig_wsgi
+apig_wsgi
 boto3
