Improve leaderboard UI: - Add tooltips to show full content of truncated cells - Highlight current user's row in light green - Make current user's name bold in active table - Change '0 seconds' to 'Syncing...' in countdown - Remove debug console.log statements - Add constants for refresh interval and running time

--- a/staff/leaderboard/Makefile
+++ b/staff/leaderboard/Makefile
@@ -5,7 +5,7 @@ pylint:
 	. venv/bin/activate ; pylint app
 
 local-debug:
-	. venv/bin/activate ; python -c 'from src.leaderboard_app import app; app.run(debug=True)'
+	. venv/bin/activate ; python -c 'from leaderboard_app.leaderboard_app import app; app.run(debug=True)'
 
 # https://docs.aws.amazon.com/serverless-application-model/latest/developerguide/using-sam-cli-sync.html
 sam-sync:
