--- a/lab3/lab3.service
+++ b/lab3/lab3.service
@@ -1,5 +1,5 @@
 [Unit]
-Description=Gunicorn instance to serve Flask application
+Description=Gunicorn instance to serve Flask application for lab 3
 After=network.target
 
 [Service]
@@ -10,10 +10,12 @@ WorkingDirectory=/home/ec2-user/app
 # Run gunicorn:
 # --reload - automatically reloads the app when the program changes
 # -w 4     - four workers
-# -b 127.0.0.1:5000 - listens on localhost, port 5000
+# -b 127.0.0.1:8003 - listens on localhost, port 8003
 # app:app  - runs the 'app' attribute instead a module called 'app'
 
-ExecStart=/usr/local/bin/gunicorn --reload -w 4 -b 127.0.0.1:5000 app:app
+ExecStart=/usr/local/bin/gunicorn --reload -w 4 -b 127.0.0.1:8003 app:app
+Restart=always
+RestartSec=10
 
 # Optional: specify environment variables if needed
 # Environment="PATH=/path/to/your/venv/bin"
