--- a/lab7/Makefile
+++ b/lab7/Makefile
@@ -29,7 +29,7 @@ install-lab7-service: venv/pyvenv.cfg
 		else echo /etc/httpd/conf.d/lab7.conf already installed ; \
 	fi
 	@echo
-	@echo Do not forget to edit ServerName in /etc/httpd/conf/lab7.conf, restart apache, and run certbot, and restart apache again
+	@echo Do not forget to edit ServerName in /etc/httpd/conf.d/lab7.conf, restart apache, and run certbot, and restart apache again
 	@echo You may also need to restart your web browser.
 
 ################################################################
