fixed more typos

--- a/lab7/lab7.conf
+++ b/lab7/lab7.conf
@@ -1,8 +1,8 @@
 <VirtualHost *:80>
-    ServerName smashedemail-lab5.csci-e-11.org
-    DocumentRoot /home/ec2-user/spring25/lab4/www
+    ServerName smashedemail-lab7.csci-e-11.org
+    DocumentRoot /home/ec2-user/spring25/lab7/www
 
     # Reverse proxy configuration for lab7
-    ProxyPass "/" "http://127.0.0.1:8007"
+    ProxyPass "/" "http://127.0.0.1:8007/"
     ProxyPassReverse "/" "http://127.0.0.1:8007/"
 </VirtualHost>
