--- a/lab3/sgarfinkel-le-ssl.conf
+++ b/lab3/sgarfinkel-le-ssl.conf
@@ -1,11 +1,11 @@
 <IfModule mod_ssl.c>
 <VirtualHost *:443>
-    ServerName sgarfinkel.csci-e-11.org
-    DocumentRoot /path/to/your/website
+    ServerName smashedemail.csci-e-11.org
+    DocumentRoot /home/ec2-user/www
     # Optional: Other directives like Directory or Log settings
 
-SSLCertificateFile /etc/letsencrypt/live/sgarfinkel.csci-e-11.org/fullchain.pem
-SSLCertificateKeyFile /etc/letsencrypt/live/sgarfinkel.csci-e-11.org/privkey.pem
+SSLCertificateFile /etc/letsencrypt/live/smashedemail.csci-e-11.org/fullchain.pem
+SSLCertificateKeyFile /etc/letsencrypt/live/smashedemail.csci-e-11.org/privkey.pem
 Include /etc/letsencrypt/options-ssl-apache.conf
 
     # Reverse proxy configuration for /flask/
