--- a/lab3/username.conf
+++ b/lab3/username.conf
@@ -1,6 +1,6 @@
 <VirtualHost *:80>
     ServerName username.csci-e-11.org
-    DocumentRoot /home/www
+    DocumentRoot /home/ec2-user/www
 
     # Reverse proxy configuration for lab3
     ProxyPass "/" "http://127.0.0.1:8003/"
