--- a/lab3/lab3.service
+++ b/lab3/lab3.service
@@ -1,3 +1,4 @@
+### /etc/systemd/system/lab3.service ###
 [Unit]
 Description=Gunicorn instance to serve Flask application for lab 3
 After=network.target
@@ -6,19 +7,10 @@ After=network.target
 User=ec2-user
 Group=ec2-user
 WorkingDirectory=/home/ec2-user/app
-
-# Run gunicorn:
-# --reload - automatically reloads the app when the program changes
-# -w 4     - four workers
-# -b 127.0.0.1:8003 - listens on localhost, port 8003
-# app:app  - runs the 'app' attribute instead a module called 'app'
-
+Environment="PATH=/home/ec2-user/venv/bin"
 ExecStart=/usr/local/bin/gunicorn --reload -w 2 -b 127.0.0.1:8003 app:app
 Restart=always
 RestartSec=5
-
-# Optional: specify environment variables if needed
-# Environment="PATH=/path/to/your/venv/bin"
 
 [Install]
 WantedBy=multi-user.target
