--- a/lab5/Makefile
+++ b/lab5/Makefile
@@ -69,8 +69,12 @@ pylint:
 ################################################################
 ## Healthcheck - before you start lab3
 
-check:
+.PHONY: healthcheck
+healthcheck:
 	python3 -m healthcheck.main
+
+pylint-healthcheck:
+	venv/bin/python3 -m pylint  --rcfile=healthcheck/.pylintrc healthcheck
 
 # make venv always run, even if it exists
 .PHONY: venv
