--- a/staff/leaderboard/.pylintrc
+++ b/staff/leaderboard/.pylintrc
@@ -1,4 +1,4 @@
 [MASTER]
-init-hook='import sys; sys.path.append("src")'
+init-hook='import sys; sys.path.insert(0,"./leaderboard_app")'
 load-plugins=pylint_pytest
 source-roots=app
