--- a/etc/Makefile
+++ b/etc/Makefile
@@ -9,15 +9,6 @@ SSH_KEY_NAME=seasons
 REGION=us-east-2
 AMI=ami-05eb56e0befdb025f
 
-test-installer:
-	@echo starting instance with key
-	aws ec2 run-instances \
-	  --instance-type t3a.nano \
-	  --image-id $(AMI) \
-	  --key-name $(SSH_KEY_NAME) \
-	  --region us-east-2 \
-	  --tag-specifications  'ResourceType=instance,Tags=[{Key=Name,Value=makefile-launch}]'
-
 list-running-instances:
 	aws ec2 describe-instances \
 	  --filters "Name=instance-state-name,Values=running" \
@@ -29,7 +20,7 @@ list-security-groups:
 	aws ec2 describe-security-groups --region $(REGION) --query 'SecurityGroups[].{Description:Description,GroupId:GroupId,GroupName:GroupName}' --output table
 
 list-lts-images:
-	aws ec2 describe-images \                                                                                                                                                                                                                 (main)csci_e-11
+	aws ec2 describe-images \
 	  --region us-east-2 \
 	  --owners 099720109477 \
 	  --filters "Name=name,Values=ubuntu/images/hvm-ssd/ubuntu-jammy-22.04-amd64-server-*" \
