--- a/etc/e11/pyproject.toml
+++ b/etc/e11/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "e11"
-version = "0.1.0"
+version = "0.1.1"
 description = "CSCI E-11 command for managing submissions to grader and AWS infrastructure"
 authors = [
     {name = "Simson Garfinkel",email = "simsong@acm.org"}
@@ -9,7 +9,10 @@ license = {text = "GPL"}
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
-    "boto3 (>=1.39.14,<2.0.0)"
+    "boto3 (>=1.39.14,<2.0.0)",
+    "requests (>=2.32.4,<3.0.0)",
+    "dnspython (>=2.7.0,<3.0.0)",
+    "validate-email (>=1.3,<2.0)"
 ]
 
 
