--- a/lab3/lab3.service
+++ b/lab3/lab3.service
@@ -4,13 +4,13 @@ Description=Gunicorn instance to serve Flask application for Lab 3
 After=network.target
 
 [Service]
-User=ec2-user
-Group=ec2-user
-WorkingDirectory=/home/ec2-user
-Environment="PATH=/home/ec2-user/venv/bin"
-ExecStart=/home/ec2-user/venv/bin/gunicorn -w 2 -b 127.0.0.1:8003 --reload app.app:app
+User=ubuntu
+Group=ubuntu
+WorkingDirectory=/home/ubuntu/spring26/lab3
+Environment="PATH=/home/ubuntu/spring26/lab3/.venv/bin"
+ExecStart=/home/ubuntu/spring26/lab3/.venv/bin/gunicorn -w 2 -b 127.0.0.1:8003 --reload simple_flask_application:app
 Restart=always
-RestartSec=5
+RestartSec=1
 
 
 [Install]
