--- a/etc/e11/Makefile
+++ b/etc/e11/Makefile
@@ -1,16 +1,19 @@
-# Run tests with Poetry; produce coverage.xml for Codecov
-.PHONY: pytest install-dev clean
-
+# e11/Makefile
+.PHONY: install pytest clean
 POETRY ?= poetry
 
-install-dev:
-	$(POETRY) install --sync
-	@: # Ensure pytest deps exist inside Poetry venv (only if not declared in pyproject)
+install:
+	@set -e; \
+	if [ ! -x .venv/bin/python ]; then \
+	  python3 -m venv .venv; \
+	fi; \
+	$(POETRY) config virtualenvs.create true --local; \
+	$(POETRY) config virtualenvs.in-project true --local; \
+	$(POETRY) env use .venv/bin/python; \
+	$(POETRY) sync
 
-pytest: install-dev
-	@: # Use Poetry venv for execution and coverage
-	PYTHONWARNINGS=default $(POETRY) run pytest -q \
-	  --maxfail=1 --disable-warnings \
+pytest: install
+	$(POETRY) run pytest -q --maxfail=1 --disable-warnings \
 	  --cov=e11 --cov-report=term-missing --cov-report=xml
 
 clean:
