--- a/lab4/lab4.service
+++ b/lab4/lab4.service
@@ -1,27 +1,16 @@
+### /etc/systemd/system/lab4.service ###
 [Unit]
-Description=Gunicorn instance to serve Flask application
+Description=Gunicorn instance to serve Flask application for lab 4
 After=network.target
 
 [Service]
-User=ec2-user
-Group=ec2-user
-WorkingDirectory=/home/ec2-user/spring25/lab4
-
-# Run gunicorn:
-# --reload - automatically reloads the app when the program changes
-# -w 2     - two workers
-# -b 127.0.0.1:8004 - listens on localhost, port 8004
-# app:app  - runs the 'app' attribute instead a module called 'app'
-
-ExecStart=/home/ec2-user/spring25/lab4/venv/bin/gunicorn \
-    --reload -w 2 -b 127.0.0.1:8004 \
-    --access-logfile=/home/ec2-user/spring25/lab4/logs/access.log \
-    --error-logfile=/home/ec2-user/spring25/lab4/logs/error.log \
-    app:app
-# Optional: specify environment variables if needed
-# Environment="PATH=/path/to/your/venv/bin"
+User=ubuntu
+Group=ubuntu
+WorkingDirectory=/home/ubuntu/spring26/lab4
+Environment="PATH=/home/ubuntu/spring26/lab4/.venv/bin"
+ExecStart=/home/ubuntu/spring26/lab4/.venv/bin/gunicorn -w 2 -b 127.0.0.1:8004 --reload server:app
 Restart=always
-RestartSec=10
+RestartSec=1
 
 [Install]
 WantedBy=multi-user.target
