--- a/etc/e11/grader/Makefile
+++ b/etc/e11/grader/Makefile
@@ -1,57 +1,29 @@
-# ===== e11 grader Makefile =====
-TEMPLATE        ?= template.grader.yaml
-STACK           ?= e11-grader
-REGION          ?= us-east-1
-DDB_TABLE_ARN   ?= arn:aws:dynamodb:$(REGION):000000000000:table/e11-grades
-SES_FROM        ?= noreply@csci-e-11.org
-SSH_SECRET_ID   ?= e11/grader/ssh_private_key
-RESOLVE_S3      ?= --resolve-s3
-POETRY          ?= poetry
+pytest:
+	venv/bin/pytest --log-cli-level=DEBUG
 
-.SILENT:
-.PHONY: help print check build deploy \
-        build-E11GraderFunction clean-E11GraderFunction
+pylint:
+	venv/bin/pylint leaderboard_app
 
-help:
-	echo "Targets: check, build, deploy"
+local-debug:
+	. venv/bin/activate ; python -c 'from leaderboard_app.flask_app import app; app.run(debug=True)'
 
-print:
-	echo TEMPLATE=$(TEMPLATE); echo STACK=$(STACK); echo REGION=$(REGION)
-	echo DDB_TABLE_ARN=$(DDB_TABLE_ARN); echo SES_FROM=$(SES_FROM); echo SSH_SECRET_ID=$(SSH_SECRET_ID)
+# https://docs.aws.amazon.com/serverless-application-model/latest/developerguide/using-sam-cli-sync.html
+sam-sync:
+	sam sync --code --watch
 
-guard-%:
-	@if [ -z "$($*)" ]; then echo "Missing required variable: $*"; exit 1; fi
+deploy:
+	make pylint
+	sam validate
+	sam validate --lint
+	sam build
+	sam deploy
+	sam logs --stack-name leaderboard --tail
 
-check: guard-DDB_TABLE_ARN guard-SES_FROM guard-SSH_SECRET_ID
-	echo "==> SAM validate"; sam validate -t $(TEMPLATE)
-	echo "==> AWS identity"; aws sts get-caller-identity >/dev/null; echo "OK"
-
-build:
-	echo "==> sam build -t $(TEMPLATE)"; sam build -t $(TEMPLATE) --cached --parallel
-
-deploy: check build
-	echo "==> sam deploy"
-	sam deploy -t $(TEMPLATE) \
-	  --stack-name $(STACK) --region $(REGION) \
-	  --capabilities CAPABILITY_IAM $(RESOLVE_S3) \
-	  --parameter-overrides \
-	    DynamoTableArn="$(DDB_TABLE_ARN)" \
-	    SesFromAddress="$(SES_FROM)" \
-	    SshSecretId="$(SSH_SECRET_ID)"
-	echo "Deployed stack: $(STACK) in $(REGION)"
-
-# SAM build hooks for Lambda logical ID: E11GraderFunction
-build-E11GraderFunction:
-	@: # Build local e11 wheel with Poetry (includes e11/lab_tests)
-	$(POETRY) -C ../e11 build -f wheel
-	WHL=$$(ls -1 ../e11/dist/*.whl | tail -n1); \
-	echo "==> Using wheel $$WHL"; \
-	python -m pip install --upgrade pip >/dev/null; \
-	@: # Install Lambda deps + local wheel into artifact
-	python -m pip install -r $(SOURCE_DIR)/grader/requirements.txt -t $(ARTIFACTS_DIR)
-	python -m pip install "$$WHL" -t $(ARTIFACTS_DIR)
-	@: # Copy handler code
-	rsync -a --exclude '__pycache__' $(SOURCE_DIR)/grader/ $(ARTIFACTS_DIR)/
-
-clean-E11GraderFunction:
-	rm -rf $(ARTIFACTS_DIR)/*
+# Create the virtual environment and install both host requirements
+# and the lambda requirements for testing
+.PHONY: venv
+venv:
+	python3.13 -m venv venv
+	venv/bin/pip install --upgrade pip
+	venv/bin/pip install -r requirements.txt
+	venv/bin/pip install -r leaderboard_app/requirements.txt
